apps/ingestion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion
  namespace: ingestion
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - ingestion
  rules:
  - host: ingestion
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingestion
            port:
              number: 80
